--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Калькулятор репутации — Арсенал</title>
 <meta name="description" content="Калькулятор репутации Арсенала — рассчитайте оптимальные варианты получения репутации, сравните стоимость и вес." />
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧮</text></svg>">
 <meta name="theme-color" content="#0b0b0d" />
 <style>
 :root{
@@ -670,3 +671,4 @@ ym(104609292, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true
 
 </body>
 </html>
+
