--- a/index.html
+++ b/index.html
@@ -42,53 +42,53 @@
     </div>
     <div id="individual-panel" class="table-wrap" role="region" aria-labelledby="individual-label">
       <table class="table" aria-describedby="individual-label">
-        <thead>
-          <tr>
-            <th id="individual-label" class="col-name">Наименование ресурса</th>
-            <th class="col-death">Выпадает при смерти</th>
-            <th class="col-weight">Вес</th>
-            <th class="col-rep">Репутация за единицу</th>
-            <th class="col-price">Цена на аукционе</th>
-            <th class="col-rep-price">Цена единицы репутации</th>
-            <th class="col-quantity">Количество предметов</th>
-            <th class="col-total-weight">Общий вес</th>
-            <th class="col-total-cost">Итоговая стоимость</th>
-          </tr>
-        </thead>
+       <thead>
+  <tr>
+    <th id="individual-label" class="col-name" data-sort="name">Наименование ресурса</th>
+    <th class="col-death" data-sort="deathDrop">Выпадает при смерти</th>
+    <th class="col-weight" data-sort="weight">Вес</th>
+    <th class="col-rep" data-sort="repPerUnit">Репутация за единицу</th>
+    <th class="col-price" data-sort="price">Цена на аукционе</th>
+    <th class="col-rep-price" data-sort="repPerPrice">Цена единицы репутации</th>
+    <th class="col-quantity" data-sort="quantityNeeded">Количество предметов</th>
+    <th class="col-total-weight" data-sort="totalWeight">Общий вес</th>
+    <th class="col-total-cost" data-sort="totalCost">Итоговая стоимость</th>
+  </tr>
+</thead>
         <tbody id="individual-body"></tbody>
       </table>
     </div>
     <div id="personal-panel" class="table-wrap" role="region" aria-labelledby="personal-label" style="display:none">
       <table class="table" aria-describedby="personal-label">
-        <thead>
-          <tr>
-            <th id="personal-label" class="col-name">Наименование ресурса</th>
-            <th class="col-quantity">Количество ресурса</th>
-            <th class="col-price">Цена на аукционе</th>
-            <th class="col-rep-price">Стоимость ящика</th>
-            <th class="col-rep-price">Стоимость единицы репутации</th>
-            <th class="col-quantity">Количество ящиков</th>
-            <th class="col-total-weight">Общий вес</th>
-            <th class="col-total-cost">Итоговая стоимость</th>
-          </tr>
-        </thead>
+       <thead>
+  <tr>
+    <th id="personal-label" class="col-name" data-sort="name">Наименование ресурса</th>
+    <th class="col-quantity" data-sort="resourcesNeeded">Количество ресурса</th>
+    <th class="col-price" data-sort="resourcePrice">Цена на аукционе</th>
+    <th class="col-rep-price" data-sort="boxCost">Стоимость ящика</th>
+    <th class="col-rep-price" data-sort="repPerPrice">Стоимость единицы репутации</th>
+    <th class="col-quantity" data-sort="boxesNeeded">Количество ящиков</th>
+    <th class="col-total-weight" data-sort="totalWeight">Общий вес</th>
+    <th class="col-total-cost" data-sort="totalCost">Итоговая стоимость</th>
+  </tr>
+</thead>
         <tbody id="personal-body"></tbody>
       </table>
     </div>
     <div id="nonpersonal-panel" class="table-wrap" role="region" aria-labelledby="nonpersonal-label" style="display:none">
       <table class="table" aria-describedby="nonpersonal-label">
-        <thead>
-          <tr>
-            <th id="nonpersonal-label" class="col-name">Наименование ресурса</th>
-            <th class="col-quantity">Количество ресурса</th>
-            <th class="col-price">Цена на аукционе</th>
-            <th class="col-rep-price">Стоимость ящика</th>
-            <th class="col-rep-price">Стоимость единицы репутации</th>
-            <th class="col-quantity">Количество ящиков</th>
-            <th class="col-total-weight">Общий вес</th>
-            <th class="col-total-cost">Итоговая стоимость</th>
-          </tr>
-        </thead>
+     <thead>
+  <tr>
+    <th id="nonpersonal-label" class="col-name" data-sort="name">Наименование ресурса</th>
+    <th class="col-quantity" data-sort="resourcesNeeded">Количество ресурса</th>
+    <th class="col-price" data-sort="resourcePrice">Цена на аукционе</th>
+    <th class="col-rep-price" data-sort="boxCost">Стоимость ящика</th>
+    <th class="col-rep-price" data-sort="repPerPrice">Стоимость единицы репутации</th>
+    <th class="col-quantity" data-sort="boxesNeeded">Количество ящиков</th>
+    <th class="col-total-weight" data-sort="totalWeight">Общий вес</th>
+    <th class="col-total-cost" data-sort="totalCost">Итоговая стоимость</th>
+  </tr>
+</thead>
         <tbody id="nonpersonal-body"></tbody>
       </table>
     </div>
@@ -153,3 +153,4 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/104609292" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 </html>
+
