--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div id="individual-panel" class="table-wrap" role="region" aria-labelledby="individual-label">
-      <table class="table" aria-describedby="individual-label">
+      <table id="individual-table" class="table" aria-describedby="individual-label">
        <thead>
   <tr>
     <th id="individual-label" class="col-name" data-sort="name">Наименование ресурса</th>
@@ -59,7 +59,7 @@
       </table>
     </div>
     <div id="personal-panel" class="table-wrap" role="region" aria-labelledby="personal-label" style="display:none">
-      <table class="table" aria-describedby="personal-label">
+      <table id="personal-table" class="table" aria-describedby="personal-label">
        <thead>
   <tr>
     <th id="personal-label" class="col-name" data-sort="name">Наименование ресурса</th>
@@ -76,7 +76,7 @@
       </table>
     </div>
     <div id="nonpersonal-panel" class="table-wrap" role="region" aria-labelledby="nonpersonal-label" style="display:none">
-      <table class="table" aria-describedby="nonpersonal-label">
+      <table id="nonpersonal-table" class="table" aria-describedby="nonpersonal-label">
      <thead>
   <tr>
     <th id="nonpersonal-label" class="col-name" data-sort="name">Наименование ресурса</th>
@@ -153,4 +153,5 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/104609292" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 </html>
+
 
